--- a/src/app/components/home-page/home-page.component.scss
+++ b/src/app/components/home-page/home-page.component.scss
@@ -1,4 +1,4 @@
-.header-block {
+.header-section {
     margin-top: -50px;
     text-align: center;
     height: 100vh;
@@ -37,15 +37,12 @@
     }
 }
 
+
+
 .product-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 0 120px;
-
-    @media (max-width: 768px) {
-        padding: 0 10px;
-    }
 
     .product {
         box-sizing: border-box;
@@ -90,5 +87,53 @@
                 margin-right: 10px;
             }
         }
+
+        &.filtered {
+            width: 60%;
+            margin-right: 0;
+        }
     }
 }
+
+.product-section {
+    padding: 0 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+    h2 {
+        text-align: center;
+        font-size: 36px;
+        margin-bottom: 10px;
+
+    }
+
+    @media (max-width: 768px) {
+        padding: 0 10px;
+
+        h2 {
+            font-size: 26px;
+        }
+
+        .filter {
+            padding: 10px 8px 0 8px;
+            width: 200px;
+        }
+    }
+
+    .filter {
+        text-align: center;
+        padding: 16px 6px;
+        box-sizing: border-box;
+        border: 1px solid rgb(197, 197, 197);
+        border-radius: 3px;
+
+        @media (min-width: 769px) {
+            width: 400px;
+        }
+    }
+}
+
+
+
