--- a/src/app/components/shops-page/shops-page.component.scss
+++ b/src/app/components/shops-page/shops-page.component.scss
@@ -1,47 +1,76 @@
 h1 {
-    text-align: center;
-    margin-top: 70px;
-
+  text-align: center;
+  margin-top: 70px;
 }
+
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    margin-bottom: 40px;
-   
+  display: flex;
+    flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 40px;
+align-items: center;
+  
+
+  .shop-item {
+    width: 100%;
+    margin-bottom: 20px;
+    background-color: #fffaf2;
+    padding: 20px;
+    border-radius: 10px;
+    border: 1px solid #c66c49;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+    .map-container {
+      display: none;
+      justify-content: center;
+      align-items: center;
+
+      iframe {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    &.show-map {
+      .map-container {
+        display: flex; 
+        margin: 10px 0;
+      }
+    }
 
     @media (min-width: 768px) {
-        padding: 0 80px; 
+      width: 50%;
+      margin-bottom: 0;
     }
 
-    .shop-item {
-        width: 100%; 
-        margin-bottom: 20px;  
-        background-color: #fffaf2;
-        padding: 20px;
-        border-radius: 10px;
-        border: 1px solid #c66c49;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-
-
-        @media (min-width: 768px) {
-            width: calc(35% - 20px); 
-            margin-bottom: 0; 
-        }
-
-        p {
-            margin-bottom: 10px;
-        }
-
-        a {
-            text-decoration: none;
-            color: #c66c49; 
-
-            &:hover {
-                    text-decoration: underline; 
-                }
-        }
-        
+    p {
+      margin-bottom: 10px;
     }
+
+    a {
+      text-decoration: none;
+      color: #c66c49;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+
+  button {
+    display: block;
+    margin: 0 auto;
+    padding: 8px 30px;
+    background-color: #c66c49;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+    &:hover {
+      background-color: #a44a2d;
+    }
+  }
 }
